--- a/config/theme.css
+++ b/config/theme.css
@@ -1,8 +1,8 @@
 :root {
   --primary: #120950;
   --primary-text: #ffffff;
-  --secondary: hsl(197, 99%, 57%);
+  --secondary: #F9B233;
   --secondary-text: #ffffff;
-  --accent: #ffffff;
-  --accent-text: #120950;
+  --accent: #0c0b0b;
+  --accent-text: #F9B233;
 }
